[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Vinjett red monster1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Vinjett red monster 3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Vinjett red monster2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Reddie.gd" type="Script" id=4]
[ext_resource path="res://Audio/256 cut.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 430.796

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CircleShape2D" id=3]

[node name="RigidBody2D" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.103155, 0.108324 )
frames = SubResource( 1 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4.74512, 4.76627 )
scale = Vector2( 0.103155, 0.108324 )
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]
scale = Vector2( 1.10877, 1.17563 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -3, 4 )
scale = Vector2( 4.66432, 4.77111 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( -26.1123, -26.5691 )
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 24.0

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
